  from installed package list.

* Add `--progress-bar <progress_bar>` to ``pip download``, ``pip install`` and
  ``pip wheel`` commands, to allow selecting a specific progress indicator
  type (:pull:`4194`). To completely suppress (for example in a CI environment)
  use ``--progress-bar off```.

* Add support for the new ``@ url`` syntax from PEP 508 (:pull:`4175`)


**9.0.1 (2016-11-06)**

* Correct the deprecation message when not specifying a --format so that it
  uses the correct setting name (``format``) rather than the incorrect one
  (``list_format``) (:issue:`4058`).

* Fix ``pip check`` to check all available distributions and not just the
  local ones (:issue:`4083`).

* Fix a crash on non ASCII characters from `lsb_release` (:issue:`4062`).

* Fix an SyntaxError in an unused module of a vendored dependency
  (:issue:`4059`).

* Fix UNC paths on Windows (:issue:`4064`).


**9.0.0 (2016-11-02)**

* **BACKWARD INCOMPATIBLE** Remove the attempted autodetection of requirement
  names from URLs, URLs must include a name via ``#egg=``.

* **DEPRECATION** ``pip install --egg`` have been deprecated and will be
  removed in the future. This "feature" has a long list of drawbacks which
  break nearly all of pip's other features in subtle and hard-to-diagnose
  ways.

* **DEPRECATION** ``--default-vcs`` option (:issue:`4052`).

* **WARNING** pip 9 cache can break forward compatibility with previous pip
  versions if your package repository allows chunked responses (:issue:`4078`).

* Add a ``pip check`` command to check installed packages dependencies
  (:pull:`3750`).

* Add option allowing user to abort pip operation if file/directory exists

* Add Appveyor CI

* Uninstall existing packages when performing an editable installation of
  the same packages (:issue:`1548`).

* ``pip show`` is less verbose by default. ``--verbose`` prints multiline fields.
  (:pull:`3858`).

* Add optional column formatting to ``pip list`` (:issue:`3651`).
