@@ -23,6 +23,10 @@
 
 * Add support for the new ``@ url`` syntax from PEP 508 (:pull:`4175`)
 
+* When checking for the presence of setuptools in preparation for building
+  from an sdist, check in a subprocess to avoid the side-effects of
+  importing setuptools (:issue:4264).
+
 
 **9.0.1 (2016-11-06)**
 
